[package]
name = "rbxlx-to-rojo"
version = "1.1.0"
authors = ["Kampfkarren"]
edition = "2021"

[lib]
name = "rbxlx_to_rojo"
path = "src/lib.rs"

[[bin]]
name = "rbxlx-to-rojo"
path = "src/cli.rs"
required-features = ["cli"]

[dependencies]
env_logger = "0.6"
lazy_static = "1.4"
log = "0.4"
rbx_binary = { path = "rbx-dom/rbx_binary" }
rbx_dom_weak = { path = "rbx-dom/rbx_dom_weak" }
rbx_reflection = { path = "rbx-dom/rbx_reflection" }
rbx_reflection_database = { path = "rbx-dom/rbx_reflection_database" }
rbx_xml = { path = "rbx-dom/rbx_xml" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
nfd = { git = "https://github.com/saurvs/nfd-rs", optional = true }

[dev-dependencies]
pretty_assertions = "0.6"

[features]
cli = ["nfd"]
